update app.js and restructure repo

--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -28,10 +28,10 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="/">Home</a></li>
+							<li><a href="/cuisines">Cuisines</a></li>
+							<li><a href="/news">News</a></li>
+							<li><a href="/Template">Elements</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -65,7 +65,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Cuisines</a></h3>
+										<h3><a href="/cuisines" class="link">Cuisines</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
